# arnold

./: .env.example  .gitignore  CLAUDE_CODE_SPEC.md  CLEANUP_COMPLETE.md  CODENAMES.md  DUAL_SOURCE_IMPORT_STATUS.md  ENVIRONMENT.md  GRAPH_RELATIONSHIP_LAYER_COMPLETE.md  INSTALL.md  Makefile  PROJECT_STATUS.md  QUICKREF.md  README.md  STATUS.md  claude.md  grip_hang_pattern_review.csv  grip_hang_pattern_review.numbers  hrr_qc_bundle.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  setup_hrr_qc.sh
config/: arnold.yaml  hrr_defaults.json  hrr_extraction.yaml  neo4j.yaml  sources.yaml
data/: catalog.json  classifications_batch_100.json  movement_classifications_full.json
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  DATA_SOURCES.md  DOCUMENTATION_REGISTER.md  HANDOFF.md  METRICS.md  MOVEMENT_PATTERN_CLASSIFICATION_REPORT.md  PHASE4_SUMMARY.md  PHASE4_VERIFICATION_REPORT.md  PHASE4_WORKOUT_INGESTION_COMPLETE.md  PLANNING.md  QUERY_OWNERSHIP.md  ROADMAP.md  ROADMAP_digital_twin_vision.md  STANDARDS_AND_ONTOLOGIES.md  TESTING.md  TRAINING_METRICS.md  WORKOUT_INGEST_SPEC.md  arnold-phase2-spec.md  arnold-spec.md  exercise_kb_improvement_plan.md  hrr-data-quality-checklist.md  hrr_peak_adjustment_candidates.md  hrr_qc_system.md  hrr_quality_gates.md  hrr_research_protocol.md  schema.md  setup.md
issues/: hrr_double_peak_detection.md
kernel/: 01_constraints.cypher  02_reference_nodes.cypher  03_anatomy.cypher  04_exercise_sources.cypher  05_canonical_exercises.cypher  06_exercise_relationships.cypher  README.md
migrations/: CC_DIAGNOSE_ANALYTICS.md  CC_FIX_WORKOUT_SUMMARIES.md  CC_TASK_AUDIT_BRIEFING_SOURCES.md  CC_TASK_DEBUG_MEMORY_POSTGRES.md  CC_TASK_FIX_LOG_WORKOUT.md  CLAUDE.md  HANDOFF_2026-01-22_PHASE7.md  HANDOFF_2026-01-22_PHASE7b.md  HANDOFF_2026-01-22_PHASE7c.md  HANDOFF_2026-01-22_PHASE7d.md  HANDOFF_v2_completion.md  PHASE_4_MCP_VERIFICATION.md  PHASE_6B_DEVIATION_FIX.md  PHASE_6C_ARCHITECTURE_CORRECTIONS.md  PHASE_7_MCP_VERIFICATION.md  PHASE_7_URGENT_FIXES.md  SCHEMA_SIMPLIFICATION_INSTRUCTIONS.md  THREAD_HANDOFF_2026-01-19_analytics_v2.md  fix_combined_training_load_v2.py  fix_exercise_name_resolution.py  v2_completion_migration.sql
outputs/: hrr_all.csv  hrr_all_intervals.csv  hrr_calibration.json  hrr_edge_cases_review.csv  hrr_extrapolation_results.csv  hrr_late_slope.csv  hrr_quality_all_diffs.csv  hrr_r2_segments.csv  hrr_sensitivity_results.csv  hrr_sensitivity_summary.csv
research/: README.md
schemas/: profile_schema.json  workout_schema.json
scripts/: add_missing_exercises.py  add_movement_patterns.py  (+82 more)
src/arnold-analytics-mcp/: DESIGN.md  pyproject.toml  server.py
src/arnold-analytics-mcp/arnold_analytics/: __init__.py  server.py
src/arnold-journal-mcp/: CLAUDE_DESKTOP_SETUP.md  README.md  pyproject.toml
src/arnold-journal-mcp/arnold_journal_mcp/: __init__.py  neo4j_client.py  postgres_client.py  server.py
src/arnold-memory-mcp/: README.md  pyproject.toml
src/arnold-memory-mcp/arnold_memory_mcp/: __init__.py  neo4j_client.py  postgres_client.py  server.py
src/arnold-profile-mcp/: CHANGELOG.md  CLAUDE_DESKTOP_SETUP.md  INTAKE_WORKFLOW_TESTING.md  README.md  WORKOUT_LOGGING_TESTING.md  pyproject.toml
src/arnold-profile-mcp/arnold_profile_mcp/: __init__.py  neo4j_client.py  profile_manager.py  server.py
src/arnold-training-mcp/: CLAUDE_DESKTOP_SETUP.md  README.md  pyproject.toml
src/arnold-training-mcp/arnold_training_mcp/: __init__.py  neo4j_client.py  postgres_client.py  server.py
(+375 files in other folders)
